--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -36,14 +36,17 @@
             <li onclick="window.location.href='manage_discount.php'">
                 <span class="icon">💰</span> Discounts
             </li>
-            <li onclick="window.location.href='order_details.php'">
+            <li onclick="window.location.href='orders_admin.php'">
                 <span class="icon">📋</span> Order Details
             </li>
-            <li onclick="window.location.href='returns.php'">
+            <li onclick="window.location.href='returns_admin.php'">
                 <span class="icon">↩️</span> Returns
             </li>
             <li onclick="window.location.href='manage_users.php'">
                 <span class="icon">👥</span> Users
+            </li>
+             <li onclick="window.location.href='admin_banners.php'">
+                <span class="icon">👥</span> Manage Banner
             </li>
             <li onclick="logout()">
                 <span class="icon">🚪</span> Logout
