--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -48,6 +48,9 @@
              <li onclick="window.location.href='admin_banners.php'">
                 <span class="icon">👥</span> Manage Banner
             </li>
+              <li onclick="window.location.href='admin_chat.php'">
+                <span class="icon">👥</span> User Chats
+            </li>
             <li onclick="logout()">
                 <span class="icon">🚪</span> Logout
             </li>
